CLOSED FIXED37844
[Qt] Image::drawTiled animations does not work
https://bugs.webkit.org/show_bug.cgi?id=37844
Summary [Qt] Image::drawTiled animations does not work
Zoltan Herczeg
Reported 2010-04-20 01:52:09 PDT
There is no strict order requirement between calling nativeImageForCurrentFrame() and startAnimation(). Qt requires startAnimation() must be called before nativeImageForCurrentFrame(). This patch removes this order requirement
Attachments
proposed fix (1.86 KB, patch)
2010-04-20 02:01 PDT, Zoltan Herczeg
no flags
Zoltan Herczeg
Comment 1 2010-04-20 02:01:11 PDT
Created attachment 53786 [details] proposed fix
Kenneth Rohde Christiansen
Comment 2 2010-04-20 07:19:37 PDT
Comment on attachment 53786 [details] proposed fix LGTM
WebKit Commit Bot
Comment 3 2010-04-21 07:34:50 PDT
Comment on attachment 53786 [details] proposed fix Clearing flags on attachment: 53786 Committed r57979: <http://trac.webkit.org/changeset/57979>
WebKit Commit Bot
Comment 4 2010-04-21 07:34:55 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5 2010-06-16 01:38:07 PDT
Revision r57979 cherry-picked into qtwebkit-2.0 with commit 1faaef83bb16df3b349f0ba610bdc7bbdc5197d4
Note You need to log in before you can comment on or make changes to this bug.