third_party/WebKit/WebCore/platform/graphics/qt/ImageDecoderQt.cpp
@@ -206,6 +206,8 @@ bool ImageDecoderQt::internalHandleCurrentImage(size_t frameIndex)
     // Now get the QImage from Qt and place it in the RGBA32Buffer
     QImage img;
     if (!m_reader->read(&img)) {
+        frameCount();
+        repetitionCount();
         clearPointers();
         return false;
     }
